helloworld-dockerhub.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  type: NodePort   #
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld # name of micro-service
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1         # how many pods you run
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: engrabdulrauf4u/helloworldservice
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
